--- a/firmware/stmf103/ros2bfu.ioc
+++ b/firmware/stmf103/ros2bfu.ioc
@@ -44,12 +44,20 @@ Mcu.Name=STM32F103R(C-D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin2=PA9
-Mcu.Pin3=PA10
-Mcu.Pin4=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin5=VP_SYS_VS_ND
-Mcu.Pin6=VP_SYS_VS_tim1
-Mcu.PinsNb=7
+Mcu.Pin10=PB6
+Mcu.Pin11=PB7
+Mcu.Pin12=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin13=VP_SYS_VS_ND
+Mcu.Pin14=VP_SYS_VS_tim1
+Mcu.Pin2=PA0-WKUP
+Mcu.Pin3=PA1
+Mcu.Pin4=PA6
+Mcu.Pin5=PA7
+Mcu.Pin6=PA9
+Mcu.Pin7=PA10
+Mcu.Pin8=PA15
+Mcu.Pin9=PB3
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RCTx
@@ -59,6 +67,8 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA1_Channel4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Channel5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -75,10 +85,42 @@ NVIC.TimeBase=TIM1_UP_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+PA0-WKUP.GPIOParameters=GPIO_Label
+PA0-WKUP.GPIO_Label=MotorD_DIR
+PA0-WKUP.Locked=true
+PA0-WKUP.Signal=GPIO_Input
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=MotorD_INT
+PA1.Locked=true
+PA1.Signal=GPXTI1
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=MotorA_INT
+PA15.Locked=true
+PA15.Signal=GPXTI15
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=MotorB_DIR
+PA6.Locked=true
+PA6.Signal=GPIO_Input
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=MotorB_INT
+PA7.Locked=true
+PA7.Signal=GPXTI7
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=MotorA_DIR
+PB3.Locked=true
+PB3.Signal=GPIO_Input
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=MotorC_INT
+PB6.Locked=true
+PB6.Signal=GPXTI6
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=MotorC_DIR
+PB7.Locked=true
+PB7.Signal=GPIO_Input
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 PD0-OSC_IN.Signal=RCC_OSC_IN
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -140,6 +182,14 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=64000000
 RCC.USBFreq_Value=64000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.GPXTI1.0=GPIO_EXTI1
+SH.GPXTI1.ConfNb=1
+SH.GPXTI15.0=GPIO_EXTI15
+SH.GPXTI15.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
+SH.GPXTI7.0=GPIO_EXTI7
+SH.GPXTI7.ConfNb=1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
